# MiniGit

./: .gitignore  BUILD_GUIDE_PYTHON.md  GIT_NOTES.md  NOTES.md  README.md  building_minigit_from_scratch.md  main.py
python/: main.py  pyproject.toml  test_minigit.py
python/minigit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
python/src/: branch_manager.py  index_manager.py  object_store.py  objects.py  repository.py
