[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minigit"
version = "1.0.0"
description = "A simplified Git clone built from scratch for learning"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Nagaraj"},
]
keywords = ["git", "version-control", "educational"]

[project.scripts]
minigit = "main:main"

[tool.setuptools]
py-modules = ["main"]
packages = ["src"]
